--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fico7489/laravel-pivot",
+    "name": "hqoapp/laravel-pivot",
     "description": "This package introduces new eloquent events for sync(), attach(), detach() or updateExistingPivot() methods on BelongsToMany relation.",
     "keywords": [
         "laravel BelongsToMany events",
@@ -8,10 +8,10 @@
         "laravel sync events",
         "eloquent events"
     ],
-    "homepage": "https://github.com/fico7489/laravel-pivot",
+    "homepage": "https://github.com/HqOapp/laravel-pivot",
     "support": {
-        "issues": "https://github.com/fico7489/laravel-pivot/issues",
-        "source": "https://github.com/fico7489/laravel-pivot"
+        "issues": "https://github.com/HqOapp/laravel-pivot/issues",
+        "source": "https://github.com/HqOapp/laravel-pivot"
     },
     "license": "MIT",
     "authors": [
